# system-programming-labs

./: README.md
Lab_01/Exo_01/capitalize/: Cargo.toml
Lab_01/Exo_01/capitalize/src/: main.rs
Lab_01/Exo_02/luhn/.exercism/: metadata.json
Lab_01/Exo_02/luhn/src/: lib.rs
Lab_01/Exo_02/luhn/tests/: luhn.rs
Lab_01/Exo_03/minesweeper/.exercism/: metadata.json
Lab_01/Exo_03/minesweeper/src/: lib.rs
Lab_02/Exo_01/legacy/C/: legacy.cbp  legacy.depend  legacy.layout  main.c
Lab_02/Exo_01/legacy/RUST/legacy/: Cargo.toml
Lab_02/Exo_01/legacy/RUST/legacy/src/: main.rs
Lab_02/Exo_01/legacy/RUST/legacy_byte_by_byte/: Cargo.toml
Lab_02/Exo_01/legacy/RUST/legacy_byte_by_byte/src/: main.rs
Lab_02/Exo_02/producer_consumer/: Cargo.toml
Lab_02/Exo_02/producer_consumer/src/: main.rs
Lab_02/Exo_02/producer_consumer/src/sensor/: sensor.rs
Lab_02/Exo_03/FileSystemManager/: Cargo.toml
Lab_02/Exo_03/FileSystemManager/src/: main.rs
Lab_02/Exo_03/FileSystemManager/src/resources/parent_folder/: file_txt.txt
Lab_02/Exo_03/FileSystemManager/src/resources/parent_folder/child_folder/: child_file.txt
Lab_02/test_overwrite/: Cargo.toml
Lab_02/test_overwrite/src/: main.rs
