[package]
name = "producer_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"



[[bin]]
name ="producer"
path = "src/bin/producer.rs"

[[bin]]
name ="consumer"
path = "src/bin/consumer.rs"

[[bin]]
name ="sensor"
path = "src/bin/sensor.rs"


